self-hosted/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mypasswordchecker
  labels:
    name: mypasswordchecker
    environment: production
    compliance: soc2-type2
