self-hosted/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mypasswordchecker-api
  namespace: mypasswordchecker
  labels:
    app: mypasswordchecker-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: mypasswordchecker-api
  sessionAffinity: None
